src/index.css
@import "tailwindcss";
@custom-variant dark (&:where(.dark, .dark *));

body{
  font-family: 'Inter',sans-serif;
}

.dark{
  color-scheme:dark;

}

html{
  scroll-behavior: smooth ;
}

.star-shape{
  clip-path:polygon(
    50% 0%,
    61% 35%,
    98% 35%,
    68% 57%,
    79% 91%,
    50% 70%, 
    21% 91%,
    32% 57%,
    2% 35%,  
    39% 35%
  );
}

